--- a/app/src/main/res/layout/docs_fragment.xml
+++ b/app/src/main/res/layout/docs_fragment.xml
@@ -11,4 +11,58 @@
         android:layout_height="match_parent"
         android:text="@string/docs_label" />
 
+    >
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_height="match_parent">
+
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/bottom_navigation_menu" />
+
+        <ImageView
+            android:id="@+id/i20_image"
+            android:layout_width="97dp"
+            android:layout_height="116dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginEnd="220dp"
+            android:background="#DDEBED"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.152"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/i20_sample" />
+
+        <ImageView
+            android:id="@+id/visa_image"
+            android:layout_width="97dp"
+            android:layout_height="116dp"
+            android:layout_marginStart="40dp"
+            android:background="#DDEBED"
+            app:layout_constraintStart_toEndOf="@+id/i20_image"
+            app:layout_constraintTop_toTopOf="@+id/i20_image"
+            app:srcCompat="@drawable/visa" />
+
+        <ImageView
+            android:id="@+id/i94_image"
+            android:layout_width="97dp"
+            android:layout_height="116dp"
+            android:layout_marginStart="40dp"
+            app:layout_constraintStart_toEndOf="@+id/visa_image"
+            app:layout_constraintTop_toTopOf="@+id/visa_image"
+            app:srcCompat="@drawable/i_94a" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </FrameLayout>
