--- a/app/src/main/res/layout/flights_fragment.xml
+++ b/app/src/main/res/layout/flights_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".flights_fragment">
+    tools:context=".FlightsActivity">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
