--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -65,6 +65,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/guide_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="300dp"
@@ -73,6 +74,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/home_widget_title"
             app:layout_constraintVertical_bias="1.0">
+
             <RelativeLayout
                 android:id="@+id/widget_background"
                 android:layout_width="match_parent"
@@ -86,8 +88,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="40dp"
-                    android:layout_marginEnd="0dp"
-                    />
+                    android:layout_marginEnd="0dp" />
             </RelativeLayout>
         </RelativeLayout>
 
