--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -11,29 +11,30 @@
     app:cardElevation="5dp"
     android:layout_marginBottom="10dp"
     android:layout_marginTop="10dp">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:id="@+id/card"
         android:layout_height="match_parent">
+
         <ImageView
+            android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/image"
-            android:scaleType="centerCrop"
             android:layout_centerInParent="true"
-            android:src="@drawable/project_pic1"
-            />
+            android:scaleType="centerCrop"
+            android:src="@drawable/project_pic1" />
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:background="#C6E53935"
         android:id="@+id/back"
         android:layout_height="match_parent">
-            />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Top Bucket List Trips 2023"
+            android:text="@string/text1"
             android:textSize="16sp"
             android:textColor="#F3FFFFFF"
             android:id="@+id/text"
