--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -20,8 +20,8 @@
             android:id="@+id/home_widget_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginEnd="30dp"
+            android:layout_marginStart="30dp"
             android:text="@string/home_widget_title"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="#FFFFFF"
@@ -34,7 +34,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginRight="20dp"
             android:id="@+id/search_bar"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
             android:layout_height="50dp">
 
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:paddingLeft="20dp"
+                android:paddingLeft="10dp"
                 android:src="@drawable/home_backarrow"
                 app:tint="#2B2C2E" />
 
@@ -53,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/home_search"
                 android:layout_alignParentRight="true"
-                android:paddingRight="20dp"
+                android:paddingRight="10dp"
                 android:layout_centerVertical="true"
                 app:tint="#2B2C2E"
                 />
@@ -63,7 +63,7 @@
             android:id="@+id/guide_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="250dp"
+            android:layout_marginTop="260dp"
             android:background="@drawable/home_dashboard_back"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
