--- a/app/src/main/res/layout/bucketlist_fragment.xml
+++ b/app/src/main/res/layout/bucketlist_fragment.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:text="@string/bucketlist_label" />
 >
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/usmap_image"
 
@@ -27,8 +28,10 @@
             android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.277"
             app:srcCompat="@drawable/map_us" />
 
         <ImageView
@@ -45,10 +48,9 @@
             android:id="@+id/mapvisit_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:layout_marginBottom="-180dp"
+            android:layout_marginBottom="320dp"
             android:text="Cities You have been to:"
-            app:layout_constraintBottom_toTopOf="@+id/imageView"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -57,7 +59,7 @@
             android:layout_width="19dp"
             android:layout_height="23dp"
             android:layout_marginTop="192dp"
-            android:layout_marginEnd="68dp"
+            android:layout_marginEnd="56dp"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="@+id/imageView"
             app:srcCompat="@drawable/map_pin" />
@@ -66,8 +68,8 @@
             android:id="@+id/pin2"
             android:layout_width="19dp"
             android:layout_height="23dp"
-            android:layout_marginTop="132dp"
-            android:layout_marginEnd="370dp"
+            android:layout_marginTop="160dp"
+            android:layout_marginEnd="300dp"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="@+id/imageView"
             app:srcCompat="@drawable/map_pin" />
