--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -20,30 +20,28 @@
             android:id="@+id/home_widget_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="30dp"
-            android:layout_marginStart="30dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginStart="32dp"
             android:text="@string/home_widget_title"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="#FFFFFF"
-            android:textSize="30sp"
+            android:textSize="20dp"
             app:layout_constraintTop_toBottomOf="@id/search_bar"
             />
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginRight="20dp"
             android:id="@+id/search_bar"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_height="50dp">
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="20dp">
 
             <!--Back arrow button-->
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:paddingLeft="10dp"
+                android:paddingLeft="20dp"
                 android:src="@drawable/home_backarrow"
                 app:tint="#2B2C2E" />
 
@@ -51,41 +49,66 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/home_search"
                 android:layout_alignParentRight="true"
-                android:paddingRight="10dp"
                 android:layout_centerVertical="true"
-                app:tint="#2B2C2E"
-                />
+                android:paddingRight="20dp"
+                android:src="@drawable/home_search"
+                app:tint="#2B2C2E" />
+
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/guide_background"
+            android:id="@+id/widget_tracker"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="260dp"
+            android:layout_marginTop="73dp"
             android:background="@drawable/home_dashboard_back"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/home_widget_title"
             app:layout_constraintVertical_bias="1.0">
 
-            <RelativeLayout
-                android:id="@+id/widget_background"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp" />
-            </RelativeLayout>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/tracker_widget_back"
+                android:layout_width="313dp"
+                android:layout_height="110dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="5dp"
+                app:cardCornerRadius="30dp"
+                app:cardElevation="2dp" />
         </RelativeLayout>
 
+            <RelativeLayout
+                android:id="@+id/guide_background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="220dp"
+                android:background="@drawable/home_dashboard_back"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/home_widget_title"
+                app:layout_constraintVertical_bias="1.0">
 
+                <RelativeLayout
+                    android:id="@+id/widget_background"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="25dp"
+                        android:layout_marginBottom="80dp" />
+
+                </RelativeLayout>
+            </RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
