Created homepage trakcer widget

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -21,11 +21,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="25dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="42dp"
             android:text="@string/home_widget_title"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="#FFFFFF"
-            android:textSize="20dp"
+            android:textSize="20sp"
             app:layout_constraintTop_toBottomOf="@id/search_bar"
             />
 
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:paddingLeft="20dp"
+                android:paddingStart="20dp"
                 android:src="@drawable/home_backarrow"
                 app:tint="#2B2C2E" />
 
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:paddingRight="20dp"
+                android:paddingEnd="20dp"
                 android:src="@drawable/home_search"
                 app:tint="#2B2C2E" />
 
@@ -61,7 +61,7 @@
             android:id="@+id/widget_tracker"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="73dp"
+            android:layout_marginTop="70dp"
             android:background="@drawable/home_dashboard_back"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/tracker_widget_back"
                 android:layout_width="313dp"
-                android:layout_height="110dp"
+                android:layout_height="114dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="20dp"
@@ -79,8 +79,42 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="5dp"
-                app:cardCornerRadius="30dp"
-                app:cardElevation="2dp" />
+                app:cardCornerRadius="28dp"
+                app:cardElevation="2dp">
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="fitStart"
+                    android:layout_marginStart="-60dp"
+                    android:src="@drawable/widget_london" />
+
+                <TextView
+                    android:id="@+id/widget_heading1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="115dp"
+                    android:text="@string/widget_heading1"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                    android:textColor="#000000"
+                    android:textSize="30sp" />
+
+                <TextView
+                    android:id="@+id/widget_heading2"
+                    android:layout_width="258dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="115dp"
+                    android:layout_marginTop="33dp"
+                    android:text="@string/widget_heading2"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                    android:textColor="#000000"
+                    android:textSize="20sp">
+                </TextView>
+
+
+            </androidx.cardview.widget.CardView>
+
         </RelativeLayout>
 
             <RelativeLayout
@@ -106,8 +140,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="25dp"
-                        android:layout_marginBottom="80dp" />
-
+                        android:layout_marginBottom="80dp"
+                        />
                 </RelativeLayout>
             </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
