Update docs page

--- a/app/src/main/res/layout/account_fragment.xml
+++ b/app/src/main/res/layout/account_fragment.xml
@@ -86,7 +86,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="430dp"
         android:fontFamily="serif"
-        android:text="Account Login"
+        android:text="Account Security"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,7 +100,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="480dp"
         android:fontFamily="serif"
-        android:text="Account Login"
+        android:text="Help Center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
