--- a/app/src/main/res/layout/flights_fragment.xml
+++ b/app/src/main/res/layout/flights_fragment.xml
@@ -141,7 +141,7 @@
             app:layout_constraintVertical_bias="1.0">
 
             <RelativeLayout
-                android:id="@+id/widget_background"
+                android:id="@+id/rv_background"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
