--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
     tools:context=".HomeActivity">
 
     <!-- fragment layout -->
@@ -20,13 +21,13 @@
             android:id="@+id/home_widget_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="35dp"
             android:text="@string/home_widget_title"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/search_bar"
-            android:layout_marginStart="35dp"
-            android:visibility="invisible"/>
+            android:visibility="invisible"
+            app:layout_constraintTop_toBottomOf="@id/search_bar" />
 
         <RelativeLayout
             android:id="@+id/search_bar"
@@ -40,10 +41,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:contentDescription="@string/backarrow_contentDesc"
                 android:paddingStart="20dp"
                 android:src="@drawable/home_backarrow"
-                app:tint="#2B2C2E"
-                android:contentDescription="@string/backarrow_contentDesc" />
+                app:tint="#2B2C2E" />
 
             <!--Search button-->
             <ImageView
@@ -51,116 +52,62 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:contentDescription="@string/widget_pic_contentDesc"
                 android:paddingEnd="20dp"
                 android:src="@drawable/home_search"
-                app:tint="#2B2C2E"
-                android:contentDescription="@string/widget_pic_contentDesc" />
-
-        </RelativeLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <RelativeLayout
-            android:id="@+id/widget_tracker"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="70dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/home_widget_title"
-            app:layout_constraintVertical_bias="1.0"
-            android:visibility="visible" >
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/tracker_widget_back"
-                android:layout_width="313dp"
-                android:layout_height="130dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="50dp"
-                android:background="#FFFFFF"
-                app:cardBackgroundColor="#E3F2FD"
-                app:cardCornerRadius="28dp"
-                app:cardElevation="2dp">
-
-                <ImageView
-                    android:id="@+id/LondonView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="-60dp"
-                    android:scaleType="fitStart"
-                    android:src="@drawable/widget_london" />
-
-                <TextView
-                    android:id="@+id/widget_heading1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="145dp"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/widget_heading1"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                    android:textColor="#000000"
-                    android:textSize="22sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/widget_heading2"
-                    android:layout_width="258dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="145dp"
-                    android:layout_marginTop="36dp"
-                    android:text="@string/widget_heading2"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                    android:textColor="#000000"
-                    android:textSize="18sp"></TextView>
-
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="200dp"
-                    android:layout_height="60dp"
-                    android:layout_marginStart="145dp"
-                    android:layout_marginTop="64dp"
-                    android:elevation="5dp"
-                    android:focusable="true"
-                    android:text="@string/widget_checkin_button"
-                    android:textSize="18sp"
-                    app:cornerRadius="20dp" />
-
-            </androidx.cardview.widget.CardView>
+                app:tint="#2B2C2E" />
         </RelativeLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        tools:ignore="ExtraText">
-
-        <RelativeLayout
-            android:id="@+id/guide_background"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="220dp"
-            android:background="@drawable/home_dashboard_back"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintVertical_bias="1.0">
+            app:layout_constraintTop_toTopOf="parent"
+            tools:context=".MainActivity"
+            tools:ignore="ExtraText">
 
             <RelativeLayout
-                android:id="@+id/widget_background"
+                android:id="@+id/guide_background"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp">
+                android:layout_height="match_parent"
+                android:layout_marginTop="220dp"
+                android:background="@drawable/home_dashboard_back"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintVertical_bias="1.0">
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
+                <RelativeLayout
+                    android:id="@+id/rv_background"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="25dp"
-                    android:layout_marginBottom="80dp" />
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="25dp"
+                        android:layout_marginBottom="80dp" />
+                </RelativeLayout>
             </RelativeLayout>
-        </RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <RelativeLayout
+        android:id="@+id/widget_tracker"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="70dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/home_widget_title"
+        app:layout_constraintVertical_bias="1.0"/>
 </FrameLayout>
