--- a/app/src/main/res/menu/dropdown_menu.xml
+++ b/app/src/main/res/menu/dropdown_menu.xml
@@ -6,4 +6,9 @@
         android:id="@+id/logout"
         android:title="Logout"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/accountSecurity"
+        android:title="Account Security"
+        app:showAsAction="never" />
 </menu>
