--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lightblue">#FF75C9FE</color>
+    <color name="lighterblue">#B7E2FF</color>
+    <color name="darkblue">#0099FA</color>
 </resources>
