--- a/app/src/main/res/menu/homepage_menu.xml
+++ b/app/src/main/res/menu/homepage_menu.xml
@@ -8,6 +8,11 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/accountSecurity"
+        android:title="Account Security"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/menu_search"
         android:icon="@drawable/home_search"
         app:showAsAction="always"
