--- a/app/src/main/res/layout/bucketlist_fragment.xml
+++ b/app/src/main/res/layout/bucketlist_fragment.xml
@@ -4,20 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BucketListActivity">
+    tools:context=".BucketListActivity"
+    >
 
     <!-- fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/bucketlist_label" />
+
 >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/usmap_image"
-
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
 
 
         <ImageView
@@ -52,7 +50,8 @@
             android:text="Cities You have been to:"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.42" />
 
         <ImageView
             android:id="@+id/pin1"
@@ -73,5 +72,7 @@
             app:layout_constraintEnd_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="@+id/imageView"
             app:srcCompat="@drawable/map_pin" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
