--- a/app/src/main/res/layout/bucketlist_fragment.xml
+++ b/app/src/main/res/layout/bucketlist_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#B7E2FF"
     tools:context=".BucketListActivity"
     >
 
@@ -47,11 +48,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="320dp"
-            android:text="Cities You have been to:"
+            android:text="@string/bucketlist_heading"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.42" />
+            app:layout_constraintTop_toTopOf="@+id/imageView"
+            app:layout_constraintVertical_bias="0.222" />
 
         <ImageView
             android:id="@+id/pin1"
