--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -90,21 +90,22 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="16dp"
+                    android:fontFamily="sans-serif"
                     android:text="@string/widget_heading1"
                     android:textColor="@color/black"
-                    android:textSize="25sp"></TextView>
+                    android:textSize="25sp"
+                    android:textStyle="bold"></TextView>
 
                 <ImageView
                     android:id="@+id/main_tracker"
-                    android:layout_width="175dp"
-                    android:layout_height="30dp"
+                    android:layout_width="182dp"
+                    android:layout_height="41dp"
                     android:layout_below="@+id/widget_heading3"
                     android:layout_alignStart="@id/widget_heading3"
                     android:layout_alignParentEnd="true"
                     android:layout_marginStart="0dp"
-                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginBottom="12dp"
                     android:src="@drawable/tracker_1" />
 
                 <TextView
